--- a/project1.lpi
+++ b/project1.lpi
@@ -9,7 +9,7 @@
       </Flags>
       <MainUnit Value="0"/>
       <TargetFileExt Value=""/>
-      <ActiveEditorIndexAtStart Value="9"/>
+      <ActiveEditorIndexAtStart Value="1"/>
     </General>
     <VersionInfo>
       <ProjectVersion Value=""/>
@@ -33,16 +33,14 @@
         <PackageName Value="LCL"/>
       </Item1>
     </RequiredPackages>
-    <Units Count="19">
+    <Units Count="13">
       <Unit0>
         <Filename Value="project1.lpr"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="project1"/>
         <CursorPos X="68" Y="11"/>
         <TopLine Value="1"/>
-        <EditorIndex Value="3"/>
-        <UsageCount Value="136"/>
-        <Loaded Value="True"/>
+        <UsageCount Value="196"/>
       </Unit0>
       <Unit1>
         <Filename Value="unit1.pas"/>
@@ -50,10 +48,10 @@
         <IsPartOfProject Value="True"/>
         <ResourceBaseClass Value="Form"/>
         <UnitName Value="Unit1"/>
-        <CursorPos X="14" Y="135"/>
-        <TopLine Value="125"/>
+        <CursorPos X="38" Y="10"/>
+        <TopLine Value="1"/>
         <EditorIndex Value="0"/>
-        <UsageCount Value="136"/>
+        <UsageCount Value="196"/>
         <Loaded Value="True"/>
       </Unit1>
       <Unit2>
@@ -62,259 +60,218 @@
         <UnitName Value="domain_unit"/>
         <CursorPos X="17" Y="16"/>
         <TopLine Value="3"/>
-        <UsageCount Value="136"/>
+        <UsageCount Value="196"/>
       </Unit2>
       <Unit3>
         <Filename Value="point3d_unit.pas"/>
         <UnitName Value="point3d_unit"/>
         <CursorPos X="1" Y="10"/>
         <TopLine Value="1"/>
-        <UsageCount Value="118"/>
+        <UsageCount Value="112"/>
       </Unit3>
       <Unit4>
         <Filename Value="../../../usr/lib/lazarus/lcl/interfaces/gtk/gtkwinapi.inc"/>
         <CursorPos X="25" Y="4963"/>
         <TopLine Value="4955"/>
-        <UsageCount Value="0"/>
+        <UsageCount Value="4"/>
       </Unit4>
       <Unit5>
         <Filename Value="region_unit.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="region_unit"/>
-        <CursorPos X="31" Y="9"/>
-        <TopLine Value="6"/>
-        <EditorIndex Value="9"/>
-        <UsageCount Value="136"/>
+        <CursorPos X="43" Y="20"/>
+        <TopLine Value="9"/>
+        <EditorIndex Value="7"/>
+        <UsageCount Value="196"/>
         <Loaded Value="True"/>
       </Unit5>
       <Unit6>
-        <Filename Value="../../../usr/lib/lazarus/lcl/interfaces/gtk/gtkwidgetset.inc"/>
-        <CursorPos X="1" Y="1253"/>
-        <TopLine Value="1238"/>
-        <UsageCount Value="1"/>
-      </Unit6>
-      <Unit7>
-        <Filename Value="../../../usr/lib/lazarus/lcl/include/buttoncontrol.inc"/>
-        <CursorPos X="1" Y="53"/>
-        <TopLine Value="39"/>
-        <UsageCount Value="5"/>
-      </Unit7>
-      <Unit8>
-        <Filename Value="../../../usr/share/fpcsrc/2.2.2/rtl/inc/mathh.inc"/>
-        <CursorPos X="14" Y="71"/>
-        <TopLine Value="56"/>
-        <UsageCount Value="1"/>
-      </Unit8>
-      <Unit9>
         <Filename Value="rigidgroup_unit.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="rigidgroup_unit"/>
         <CursorPos X="30" Y="74"/>
         <TopLine Value="61"/>
-        <EditorIndex Value="5"/>
-        <UsageCount Value="132"/>
+        <EditorIndex Value="4"/>
+        <UsageCount Value="192"/>
         <Loaded Value="True"/>
-      </Unit9>
-      <Unit10>
+      </Unit6>
+      <Unit7>
         <Filename Value="atom_unit.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="atom_unit"/>
         <CursorPos X="48" Y="24"/>
         <TopLine Value="4"/>
-        <EditorIndex Value="6"/>
-        <UsageCount Value="129"/>
+        <EditorIndex Value="5"/>
+        <UsageCount Value="189"/>
         <Loaded Value="True"/>
-      </Unit10>
-      <Unit11>
+      </Unit7>
+      <Unit8>
         <Filename Value="sinewave_unit.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="sineWave_unit"/>
         <CursorPos X="57" Y="17"/>
         <TopLine Value="2"/>
-        <EditorIndex Value="4"/>
-        <UsageCount Value="123"/>
+        <EditorIndex Value="3"/>
+        <UsageCount Value="183"/>
         <Loaded Value="True"/>
-      </Unit11>
-      <Unit12>
-        <Filename Value="../../../usr/share/fpcsrc/2.2.4/rtl/objpas/math.pp"/>
-        <UnitName Value="math"/>
-        <CursorPos X="10" Y="276"/>
-        <TopLine Value="263"/>
-        <UsageCount Value="1"/>
-      </Unit12>
-      <Unit13>
-        <Filename Value="../../../usr/share/fpcsrc/2.2.4/rtl/inc/systemh.inc"/>
-        <CursorPos X="11" Y="482"/>
-        <TopLine Value="469"/>
-        <UsageCount Value="5"/>
-      </Unit13>
-      <Unit14>
+      </Unit8>
+      <Unit9>
         <Filename Value="linkedlist_unit.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="linkedList_unit"/>
         <CursorPos X="43" Y="17"/>
         <TopLine Value="1"/>
         <EditorIndex Value="2"/>
-        <UsageCount Value="79"/>
+        <UsageCount Value="139"/>
         <Loaded Value="True"/>
-      </Unit14>
-      <Unit15>
-        <Filename Value="../../../usr/lib/lazarus/lcl/include/control.inc"/>
-        <CursorPos X="1" Y="2095"/>
-        <TopLine Value="2081"/>
-        <UsageCount Value="5"/>
-      </Unit15>
-      <Unit16>
+      </Unit9>
+      <Unit10>
         <Filename Value="myinteger_unit.pas"/>
-        <IsPartOfProject Value="True"/>
         <UnitName Value="myinteger_unit"/>
-        <CursorPos X="20" Y="1"/>
+        <CursorPos X="47" Y="1"/>
         <TopLine Value="1"/>
         <EditorIndex Value="1"/>
-        <UsageCount Value="39"/>
+        <UsageCount Value="99"/>
         <Loaded Value="True"/>
-      </Unit16>
-      <Unit17>
+      </Unit10>
+      <Unit11>
         <Filename Value="sinesegment_unit.pas"/>
-        <IsPartOfProject Value="True"/>
         <UnitName Value="sineSegment_unit"/>
-        <CursorPos X="18" Y="11"/>
+        <CursorPos X="1" Y="1"/>
         <TopLine Value="1"/>
-        <EditorIndex Value="8"/>
-        <UsageCount Value="38"/>
-        <Loaded Value="True"/>
-      </Unit17>
-      <Unit18>
+        <UsageCount Value="33"/>
+      </Unit11>
+      <Unit12>
         <Filename Value="pointnd_unit.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="pointnd_unit"/>
         <CursorPos X="19" Y="193"/>
         <TopLine Value="178"/>
-        <EditorIndex Value="7"/>
-        <UsageCount Value="38"/>
+        <EditorIndex Value="6"/>
+        <UsageCount Value="98"/>
         <Loaded Value="True"/>
-      </Unit18>
+      </Unit12>
     </Units>
     <JumpHistory Count="30" HistoryIndex="29">
       <Position1>
         <Filename Value="pointnd_unit.pas"/>
-        <Caret Line="161" Column="11" TopLine="154"/>
+        <Caret Line="50" Column="1" TopLine="36"/>
       </Position1>
       <Position2>
         <Filename Value="pointnd_unit.pas"/>
-        <Caret Line="160" Column="1" TopLine="146"/>
+        <Caret Line="51" Column="1" TopLine="37"/>
       </Position2>
       <Position3>
         <Filename Value="pointnd_unit.pas"/>
-        <Caret Line="168" Column="13" TopLine="153"/>
+        <Caret Line="52" Column="1" TopLine="38"/>
       </Position3>
       <Position4>
         <Filename Value="pointnd_unit.pas"/>
-        <Caret Line="77" Column="1" TopLine="63"/>
+        <Caret Line="54" Column="1" TopLine="40"/>
       </Position4>
       <Position5>
         <Filename Value="pointnd_unit.pas"/>
-        <Caret Line="78" Column="1" TopLine="64"/>
+        <Caret Line="56" Column="1" TopLine="42"/>
       </Position5>
       <Position6>
         <Filename Value="pointnd_unit.pas"/>
-        <Caret Line="46" Column="1" TopLine="32"/>
+        <Caret Line="79" Column="1" TopLine="65"/>
       </Position6>
       <Position7>
         <Filename Value="pointnd_unit.pas"/>
-        <Caret Line="47" Column="1" TopLine="33"/>
+        <Caret Line="80" Column="1" TopLine="66"/>
       </Position7>
       <Position8>
         <Filename Value="pointnd_unit.pas"/>
-        <Caret Line="48" Column="1" TopLine="34"/>
+        <Caret Line="81" Column="1" TopLine="67"/>
       </Position8>
       <Position9>
         <Filename Value="pointnd_unit.pas"/>
-        <Caret Line="49" Column="1" TopLine="35"/>
+        <Caret Line="78" Column="28" TopLine="68"/>
       </Position9>
       <Position10>
         <Filename Value="pointnd_unit.pas"/>
-        <Caret Line="50" Column="1" TopLine="36"/>
+        <Caret Line="168" Column="1" TopLine="154"/>
       </Position10>
       <Position11>
         <Filename Value="pointnd_unit.pas"/>
-        <Caret Line="51" Column="1" TopLine="37"/>
+        <Caret Line="148" Column="1" TopLine="134"/>
       </Position11>
       <Position12>
         <Filename Value="pointnd_unit.pas"/>
-        <Caret Line="52" Column="1" TopLine="38"/>
+        <Caret Line="126" Column="1" TopLine="112"/>
       </Position12>
       <Position13>
         <Filename Value="pointnd_unit.pas"/>
-        <Caret Line="54" Column="1" TopLine="40"/>
+        <Caret Line="128" Column="1" TopLine="114"/>
       </Position13>
       <Position14>
         <Filename Value="pointnd_unit.pas"/>
-        <Caret Line="56" Column="1" TopLine="42"/>
+        <Caret Line="134" Column="1" TopLine="120"/>
       </Position14>
       <Position15>
         <Filename Value="pointnd_unit.pas"/>
-        <Caret Line="79" Column="1" TopLine="65"/>
+        <Caret Line="149" Column="1" TopLine="135"/>
       </Position15>
       <Position16>
         <Filename Value="pointnd_unit.pas"/>
-        <Caret Line="80" Column="1" TopLine="66"/>
+        <Caret Line="150" Column="1" TopLine="136"/>
       </Position16>
       <Position17>
         <Filename Value="pointnd_unit.pas"/>
-        <Caret Line="81" Column="1" TopLine="67"/>
+        <Caret Line="152" Column="1" TopLine="138"/>
       </Position17>
       <Position18>
         <Filename Value="pointnd_unit.pas"/>
-        <Caret Line="78" Column="28" TopLine="68"/>
+        <Caret Line="202" Column="27" TopLine="182"/>
       </Position18>
       <Position19>
-        <Filename Value="pointnd_unit.pas"/>
-        <Caret Line="168" Column="1" TopLine="154"/>
+        <Filename Value="unit1.pas"/>
+        <Caret Line="135" Column="11" TopLine="125"/>
       </Position19>
       <Position20>
-        <Filename Value="pointnd_unit.pas"/>
-        <Caret Line="148" Column="1" TopLine="134"/>
+        <Filename Value="rigidgroup_unit.pas"/>
+        <Caret Line="74" Column="27" TopLine="61"/>
       </Position20>
       <Position21>
         <Filename Value="pointnd_unit.pas"/>
-        <Caret Line="126" Column="1" TopLine="112"/>
+        <Caret Line="199" Column="27" TopLine="185"/>
       </Position21>
       <Position22>
-        <Filename Value="pointnd_unit.pas"/>
-        <Caret Line="128" Column="1" TopLine="114"/>
+        <Filename Value="unit1.pas"/>
+        <Caret Line="183" Column="40" TopLine="168"/>
       </Position22>
       <Position23>
-        <Filename Value="pointnd_unit.pas"/>
-        <Caret Line="134" Column="1" TopLine="120"/>
+        <Filename Value="unit1.pas"/>
+        <Caret Line="10" Column="65" TopLine="1"/>
       </Position23>
       <Position24>
-        <Filename Value="pointnd_unit.pas"/>
-        <Caret Line="149" Column="1" TopLine="135"/>
+        <Filename Value="unit1.pas"/>
+        <Caret Line="186" Column="66" TopLine="164"/>
       </Position24>
       <Position25>
-        <Filename Value="pointnd_unit.pas"/>
-        <Caret Line="150" Column="1" TopLine="136"/>
+        <Filename Value="unit1.pas"/>
+        <Caret Line="161" Column="69" TopLine="154"/>
       </Position25>
       <Position26>
-        <Filename Value="pointnd_unit.pas"/>
-        <Caret Line="152" Column="1" TopLine="138"/>
+        <Filename Value="unit1.pas"/>
+        <Caret Line="170" Column="67" TopLine="157"/>
       </Position26>
       <Position27>
-        <Filename Value="pointnd_unit.pas"/>
-        <Caret Line="202" Column="27" TopLine="182"/>
+        <Filename Value="unit1.pas"/>
+        <Caret Line="176" Column="9" TopLine="163"/>
       </Position27>
       <Position28>
         <Filename Value="unit1.pas"/>
-        <Caret Line="135" Column="11" TopLine="125"/>
+        <Caret Line="177" Column="7" TopLine="165"/>
       </Position28>
       <Position29>
-        <Filename Value="rigidgroup_unit.pas"/>
-        <Caret Line="74" Column="27" TopLine="61"/>
+        <Filename Value="unit1.pas"/>
+        <Caret Line="184" Column="72" TopLine="171"/>
       </Position29>
       <Position30>
-        <Filename Value="pointnd_unit.pas"/>
-        <Caret Line="199" Column="27" TopLine="185"/>
+        <Filename Value="unit1.pas"/>
+        <Caret Line="195" Column="21" TopLine="177"/>
       </Position30>
     </JumpHistory>
   </ProjectOptions>
