--- a/project1.lpi
+++ b/project1.lpi
@@ -9,7 +9,7 @@
       </Flags>
       <MainUnit Value="0"/>
       <TargetFileExt Value=""/>
-      <ActiveEditorIndexAtStart Value="1"/>
+      <ActiveEditorIndexAtStart Value="2"/>
     </General>
     <VersionInfo>
       <ProjectVersion Value=""/>
@@ -33,14 +33,14 @@
         <PackageName Value="LCL"/>
       </Item1>
     </RequiredPackages>
-    <Units Count="13">
+    <Units Count="15">
       <Unit0>
         <Filename Value="project1.lpr"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="project1"/>
         <CursorPos X="68" Y="11"/>
         <TopLine Value="1"/>
-        <UsageCount Value="196"/>
+        <UsageCount Value="200"/>
       </Unit0>
       <Unit1>
         <Filename Value="unit1.pas"/>
@@ -48,10 +48,10 @@
         <IsPartOfProject Value="True"/>
         <ResourceBaseClass Value="Form"/>
         <UnitName Value="Unit1"/>
-        <CursorPos X="38" Y="10"/>
+        <CursorPos X="22" Y="19"/>
         <TopLine Value="1"/>
-        <EditorIndex Value="0"/>
-        <UsageCount Value="196"/>
+        <EditorIndex Value="2"/>
+        <UsageCount Value="200"/>
         <Loaded Value="True"/>
       </Unit1>
       <Unit2>
@@ -60,86 +60,76 @@
         <UnitName Value="domain_unit"/>
         <CursorPos X="17" Y="16"/>
         <TopLine Value="3"/>
-        <UsageCount Value="196"/>
+        <UsageCount Value="200"/>
       </Unit2>
       <Unit3>
         <Filename Value="point3d_unit.pas"/>
         <UnitName Value="point3d_unit"/>
         <CursorPos X="1" Y="10"/>
         <TopLine Value="1"/>
-        <UsageCount Value="112"/>
+        <UsageCount Value="111"/>
       </Unit3>
       <Unit4>
         <Filename Value="../../../usr/lib/lazarus/lcl/interfaces/gtk/gtkwinapi.inc"/>
         <CursorPos X="25" Y="4963"/>
         <TopLine Value="4955"/>
-        <UsageCount Value="4"/>
+        <UsageCount Value="3"/>
       </Unit4>
       <Unit5>
         <Filename Value="region_unit.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="region_unit"/>
-        <CursorPos X="43" Y="20"/>
-        <TopLine Value="9"/>
-        <EditorIndex Value="7"/>
-        <UsageCount Value="196"/>
+        <CursorPos X="1" Y="47"/>
+        <TopLine Value="22"/>
+        <EditorIndex Value="1"/>
+        <UsageCount Value="200"/>
         <Loaded Value="True"/>
       </Unit5>
       <Unit6>
         <Filename Value="rigidgroup_unit.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="rigidgroup_unit"/>
-        <CursorPos X="30" Y="74"/>
-        <TopLine Value="61"/>
-        <EditorIndex Value="4"/>
-        <UsageCount Value="192"/>
-        <Loaded Value="True"/>
+        <CursorPos X="1" Y="1"/>
+        <TopLine Value="1"/>
+        <UsageCount Value="201"/>
       </Unit6>
       <Unit7>
         <Filename Value="atom_unit.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="atom_unit"/>
-        <CursorPos X="48" Y="24"/>
-        <TopLine Value="4"/>
-        <EditorIndex Value="5"/>
-        <UsageCount Value="189"/>
-        <Loaded Value="True"/>
+        <CursorPos X="1" Y="1"/>
+        <TopLine Value="1"/>
+        <UsageCount Value="200"/>
       </Unit7>
       <Unit8>
         <Filename Value="sinewave_unit.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="sineWave_unit"/>
-        <CursorPos X="57" Y="17"/>
-        <TopLine Value="2"/>
-        <EditorIndex Value="3"/>
-        <UsageCount Value="183"/>
-        <Loaded Value="True"/>
+        <CursorPos X="80" Y="6"/>
+        <TopLine Value="1"/>
+        <UsageCount Value="196"/>
       </Unit8>
       <Unit9>
         <Filename Value="linkedlist_unit.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="linkedList_unit"/>
-        <CursorPos X="43" Y="17"/>
+        <CursorPos X="1" Y="1"/>
         <TopLine Value="1"/>
-        <EditorIndex Value="2"/>
-        <UsageCount Value="139"/>
-        <Loaded Value="True"/>
+        <UsageCount Value="152"/>
       </Unit9>
       <Unit10>
         <Filename Value="myinteger_unit.pas"/>
         <UnitName Value="myinteger_unit"/>
         <CursorPos X="47" Y="1"/>
         <TopLine Value="1"/>
-        <EditorIndex Value="1"/>
-        <UsageCount Value="99"/>
-        <Loaded Value="True"/>
+        <UsageCount Value="98"/>
       </Unit10>
       <Unit11>
         <Filename Value="sinesegment_unit.pas"/>
         <UnitName Value="sineSegment_unit"/>
         <CursorPos X="1" Y="1"/>
         <TopLine Value="1"/>
-        <UsageCount Value="33"/>
+        <UsageCount Value="32"/>
       </Unit11>
       <Unit12>
         <Filename Value="pointnd_unit.pas"/>
@@ -147,132 +137,68 @@
         <UnitName Value="pointnd_unit"/>
         <CursorPos X="19" Y="193"/>
         <TopLine Value="178"/>
-        <EditorIndex Value="6"/>
-        <UsageCount Value="98"/>
-        <Loaded Value="True"/>
+        <UsageCount Value="111"/>
       </Unit12>
+      <Unit13>
+        <Filename Value="../../../usr/lib/lazarus/lcl/include/messagedialogs.inc"/>
+        <CursorPos X="1" Y="230"/>
+        <TopLine Value="217"/>
+        <UsageCount Value="12"/>
+      </Unit13>
+      <Unit14>
+        <Filename Value="../../../usr/lib/lazarus/lcl/interfaces/gtk/gtkproc.inc"/>
+        <CursorPos X="1" Y="1655"/>
+        <TopLine Value="1642"/>
+        <EditorIndex Value="0"/>
+        <UsageCount Value="10"/>
+        <Loaded Value="True"/>
+      </Unit14>
     </Units>
-    <JumpHistory Count="30" HistoryIndex="29">
+    <JumpHistory Count="11" HistoryIndex="10">
       <Position1>
-        <Filename Value="pointnd_unit.pas"/>
-        <Caret Line="50" Column="1" TopLine="36"/>
+        <Filename Value="unit1.pas"/>
+        <Caret Line="248" Column="1" TopLine="232"/>
       </Position1>
       <Position2>
-        <Filename Value="pointnd_unit.pas"/>
-        <Caret Line="51" Column="1" TopLine="37"/>
+        <Filename Value="unit1.pas"/>
+        <Caret Line="248" Column="1" TopLine="232"/>
       </Position2>
       <Position3>
-        <Filename Value="pointnd_unit.pas"/>
-        <Caret Line="52" Column="1" TopLine="38"/>
+        <Filename Value="unit1.pas"/>
+        <Caret Line="245" Column="20" TopLine="232"/>
       </Position3>
       <Position4>
-        <Filename Value="pointnd_unit.pas"/>
-        <Caret Line="54" Column="1" TopLine="40"/>
+        <Filename Value="unit1.pas"/>
+        <Caret Line="247" Column="1" TopLine="232"/>
       </Position4>
       <Position5>
-        <Filename Value="pointnd_unit.pas"/>
-        <Caret Line="56" Column="1" TopLine="42"/>
+        <Filename Value="unit1.pas"/>
+        <Caret Line="248" Column="1" TopLine="232"/>
       </Position5>
       <Position6>
-        <Filename Value="pointnd_unit.pas"/>
-        <Caret Line="79" Column="1" TopLine="65"/>
+        <Filename Value="unit1.pas"/>
+        <Caret Line="245" Column="18" TopLine="232"/>
       </Position6>
       <Position7>
-        <Filename Value="pointnd_unit.pas"/>
-        <Caret Line="80" Column="1" TopLine="66"/>
+        <Filename Value="unit1.pas"/>
+        <Caret Line="247" Column="1" TopLine="232"/>
       </Position7>
       <Position8>
-        <Filename Value="pointnd_unit.pas"/>
-        <Caret Line="81" Column="1" TopLine="67"/>
+        <Filename Value="unit1.pas"/>
+        <Caret Line="246" Column="30" TopLine="232"/>
       </Position8>
       <Position9>
-        <Filename Value="pointnd_unit.pas"/>
-        <Caret Line="78" Column="28" TopLine="68"/>
+        <Filename Value="unit1.pas"/>
+        <Caret Line="9" Column="7" TopLine="1"/>
       </Position9>
       <Position10>
-        <Filename Value="pointnd_unit.pas"/>
-        <Caret Line="168" Column="1" TopLine="154"/>
+        <Filename Value="unit1.pas"/>
+        <Caret Line="130" Column="28" TopLine="117"/>
       </Position10>
       <Position11>
-        <Filename Value="pointnd_unit.pas"/>
-        <Caret Line="148" Column="1" TopLine="134"/>
+        <Filename Value="unit1.pas"/>
+        <Caret Line="1" Column="1" TopLine="1"/>
       </Position11>
-      <Position12>
-        <Filename Value="pointnd_unit.pas"/>
-        <Caret Line="126" Column="1" TopLine="112"/>
-      </Position12>
-      <Position13>
-        <Filename Value="pointnd_unit.pas"/>
-        <Caret Line="128" Column="1" TopLine="114"/>
-      </Position13>
-      <Position14>
-        <Filename Value="pointnd_unit.pas"/>
-        <Caret Line="134" Column="1" TopLine="120"/>
-      </Position14>
-      <Position15>
-        <Filename Value="pointnd_unit.pas"/>
-        <Caret Line="149" Column="1" TopLine="135"/>
-      </Position15>
-      <Position16>
-        <Filename Value="pointnd_unit.pas"/>
-        <Caret Line="150" Column="1" TopLine="136"/>
-      </Position16>
-      <Position17>
-        <Filename Value="pointnd_unit.pas"/>
-        <Caret Line="152" Column="1" TopLine="138"/>
-      </Position17>
-      <Position18>
-        <Filename Value="pointnd_unit.pas"/>
-        <Caret Line="202" Column="27" TopLine="182"/>
-      </Position18>
-      <Position19>
-        <Filename Value="unit1.pas"/>
-        <Caret Line="135" Column="11" TopLine="125"/>
-      </Position19>
-      <Position20>
-        <Filename Value="rigidgroup_unit.pas"/>
-        <Caret Line="74" Column="27" TopLine="61"/>
-      </Position20>
-      <Position21>
-        <Filename Value="pointnd_unit.pas"/>
-        <Caret Line="199" Column="27" TopLine="185"/>
-      </Position21>
-      <Position22>
-        <Filename Value="unit1.pas"/>
-        <Caret Line="183" Column="40" TopLine="168"/>
-      </Position22>
-      <Position23>
-        <Filename Value="unit1.pas"/>
-        <Caret Line="10" Column="65" TopLine="1"/>
-      </Position23>
-      <Position24>
-        <Filename Value="unit1.pas"/>
-        <Caret Line="186" Column="66" TopLine="164"/>
-      </Position24>
-      <Position25>
-        <Filename Value="unit1.pas"/>
-        <Caret Line="161" Column="69" TopLine="154"/>
-      </Position25>
-      <Position26>
-        <Filename Value="unit1.pas"/>
-        <Caret Line="170" Column="67" TopLine="157"/>
-      </Position26>
-      <Position27>
-        <Filename Value="unit1.pas"/>
-        <Caret Line="176" Column="9" TopLine="163"/>
-      </Position27>
-      <Position28>
-        <Filename Value="unit1.pas"/>
-        <Caret Line="177" Column="7" TopLine="165"/>
-      </Position28>
-      <Position29>
-        <Filename Value="unit1.pas"/>
-        <Caret Line="184" Column="72" TopLine="171"/>
-      </Position29>
-      <Position30>
-        <Filename Value="unit1.pas"/>
-        <Caret Line="195" Column="21" TopLine="177"/>
-      </Position30>
     </JumpHistory>
   </ProjectOptions>
   <CompilerOptions>
