--- a/project1.lpi
+++ b/project1.lpi
@@ -9,7 +9,7 @@
       </Flags>
       <MainUnit Value="0"/>
       <TargetFileExt Value=""/>
-      <ActiveEditorIndexAtStart Value="2"/>
+      <ActiveEditorIndexAtStart Value="1"/>
     </General>
     <VersionInfo>
       <ProjectVersion Value=""/>
@@ -33,7 +33,7 @@
         <PackageName Value="LCL"/>
       </Item1>
     </RequiredPackages>
-    <Units Count="15">
+    <Units Count="16">
       <Unit0>
         <Filename Value="project1.lpr"/>
         <IsPartOfProject Value="True"/>
@@ -48,9 +48,9 @@
         <IsPartOfProject Value="True"/>
         <ResourceBaseClass Value="Form"/>
         <UnitName Value="Unit1"/>
-        <CursorPos X="22" Y="19"/>
-        <TopLine Value="1"/>
-        <EditorIndex Value="2"/>
+        <CursorPos X="10" Y="299"/>
+        <TopLine Value="281"/>
+        <EditorIndex Value="1"/>
         <UsageCount Value="200"/>
         <Loaded Value="True"/>
       </Unit1>
@@ -67,21 +67,21 @@
         <UnitName Value="point3d_unit"/>
         <CursorPos X="1" Y="10"/>
         <TopLine Value="1"/>
-        <UsageCount Value="111"/>
+        <UsageCount Value="110"/>
       </Unit3>
       <Unit4>
         <Filename Value="../../../usr/lib/lazarus/lcl/interfaces/gtk/gtkwinapi.inc"/>
         <CursorPos X="25" Y="4963"/>
         <TopLine Value="4955"/>
-        <UsageCount Value="3"/>
+        <UsageCount Value="2"/>
       </Unit4>
       <Unit5>
         <Filename Value="region_unit.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="region_unit"/>
-        <CursorPos X="1" Y="47"/>
-        <TopLine Value="22"/>
-        <EditorIndex Value="1"/>
+        <CursorPos X="1" Y="11"/>
+        <TopLine Value="10"/>
+        <EditorIndex Value="0"/>
         <UsageCount Value="200"/>
         <Loaded Value="True"/>
       </Unit5>
@@ -105,100 +105,190 @@
         <Filename Value="sinewave_unit.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="sineWave_unit"/>
-        <CursorPos X="80" Y="6"/>
-        <TopLine Value="1"/>
-        <UsageCount Value="196"/>
+        <CursorPos X="18" Y="37"/>
+        <TopLine Value="24"/>
+        <EditorIndex Value="4"/>
+        <UsageCount Value="200"/>
+        <Loaded Value="True"/>
       </Unit8>
       <Unit9>
         <Filename Value="linkedlist_unit.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="linkedList_unit"/>
-        <CursorPos X="1" Y="1"/>
-        <TopLine Value="1"/>
-        <UsageCount Value="152"/>
+        <CursorPos X="23" Y="121"/>
+        <TopLine Value="100"/>
+        <EditorIndex Value="2"/>
+        <UsageCount Value="161"/>
+        <Loaded Value="True"/>
       </Unit9>
       <Unit10>
         <Filename Value="myinteger_unit.pas"/>
         <UnitName Value="myinteger_unit"/>
         <CursorPos X="47" Y="1"/>
         <TopLine Value="1"/>
-        <UsageCount Value="98"/>
+        <UsageCount Value="97"/>
       </Unit10>
       <Unit11>
         <Filename Value="sinesegment_unit.pas"/>
         <UnitName Value="sineSegment_unit"/>
         <CursorPos X="1" Y="1"/>
         <TopLine Value="1"/>
-        <UsageCount Value="32"/>
+        <UsageCount Value="31"/>
       </Unit11>
       <Unit12>
         <Filename Value="pointnd_unit.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="pointnd_unit"/>
         <CursorPos X="19" Y="193"/>
-        <TopLine Value="178"/>
-        <UsageCount Value="111"/>
+        <TopLine Value="2"/>
+        <EditorIndex Value="5"/>
+        <UsageCount Value="120"/>
+        <Loaded Value="True"/>
       </Unit12>
       <Unit13>
         <Filename Value="../../../usr/lib/lazarus/lcl/include/messagedialogs.inc"/>
         <CursorPos X="1" Y="230"/>
         <TopLine Value="217"/>
-        <UsageCount Value="12"/>
+        <UsageCount Value="11"/>
       </Unit13>
       <Unit14>
         <Filename Value="../../../usr/lib/lazarus/lcl/interfaces/gtk/gtkproc.inc"/>
         <CursorPos X="1" Y="1655"/>
         <TopLine Value="1642"/>
-        <EditorIndex Value="0"/>
-        <UsageCount Value="10"/>
-        <Loaded Value="True"/>
+        <UsageCount Value="11"/>
       </Unit14>
+      <Unit15>
+        <Filename Value="sinewaveinregion_unit.pas"/>
+        <IsPartOfProject Value="True"/>
+        <UnitName Value="sinewaveinregion_unit"/>
+        <CursorPos X="20" Y="12"/>
+        <TopLine Value="1"/>
+        <EditorIndex Value="3"/>
+        <UsageCount Value="28"/>
+        <Loaded Value="True"/>
+      </Unit15>
     </Units>
-    <JumpHistory Count="11" HistoryIndex="10">
+    <JumpHistory Count="30" HistoryIndex="29">
       <Position1>
         <Filename Value="unit1.pas"/>
-        <Caret Line="248" Column="1" TopLine="232"/>
+        <Caret Line="226" Column="45" TopLine="203"/>
       </Position1>
       <Position2>
         <Filename Value="unit1.pas"/>
-        <Caret Line="248" Column="1" TopLine="232"/>
+        <Caret Line="235" Column="54" TopLine="213"/>
       </Position2>
       <Position3>
         <Filename Value="unit1.pas"/>
-        <Caret Line="245" Column="20" TopLine="232"/>
+        <Caret Line="247" Column="32" TopLine="218"/>
       </Position3>
       <Position4>
         <Filename Value="unit1.pas"/>
-        <Caret Line="247" Column="1" TopLine="232"/>
+        <Caret Line="260" Column="13" TopLine="237"/>
       </Position4>
       <Position5>
         <Filename Value="unit1.pas"/>
-        <Caret Line="248" Column="1" TopLine="232"/>
+        <Caret Line="221" Column="1" TopLine="180"/>
       </Position5>
       <Position6>
         <Filename Value="unit1.pas"/>
-        <Caret Line="245" Column="18" TopLine="232"/>
+        <Caret Line="235" Column="51" TopLine="221"/>
       </Position6>
       <Position7>
         <Filename Value="unit1.pas"/>
-        <Caret Line="247" Column="1" TopLine="232"/>
+        <Caret Line="254" Column="5" TopLine="237"/>
       </Position7>
       <Position8>
         <Filename Value="unit1.pas"/>
-        <Caret Line="246" Column="30" TopLine="232"/>
+        <Caret Line="237" Column="40" TopLine="224"/>
       </Position8>
       <Position9>
         <Filename Value="unit1.pas"/>
-        <Caret Line="9" Column="7" TopLine="1"/>
+        <Caret Line="240" Column="13" TopLine="227"/>
       </Position9>
       <Position10>
         <Filename Value="unit1.pas"/>
-        <Caret Line="130" Column="28" TopLine="117"/>
+        <Caret Line="241" Column="53" TopLine="228"/>
       </Position10>
       <Position11>
         <Filename Value="unit1.pas"/>
-        <Caret Line="1" Column="1" TopLine="1"/>
+        <Caret Line="243" Column="69" TopLine="230"/>
       </Position11>
+      <Position12>
+        <Filename Value="unit1.pas"/>
+        <Caret Line="250" Column="92" TopLine="237"/>
+      </Position12>
+      <Position13>
+        <Filename Value="unit1.pas"/>
+        <Caret Line="278" Column="67" TopLine="255"/>
+      </Position13>
+      <Position14>
+        <Filename Value="unit1.pas"/>
+        <Caret Line="48" Column="37" TopLine="33"/>
+      </Position14>
+      <Position15>
+        <Filename Value="unit1.pas"/>
+        <Caret Line="263" Column="27" TopLine="250"/>
+      </Position15>
+      <Position16>
+        <Filename Value="unit1.pas"/>
+        <Caret Line="173" Column="76" TopLine="144"/>
+      </Position16>
+      <Position17>
+        <Filename Value="unit1.pas"/>
+        <Caret Line="169" Column="30" TopLine="144"/>
+      </Position17>
+      <Position18>
+        <Filename Value="sinewaveinregion_unit.pas"/>
+        <Caret Line="11" Column="27" TopLine="1"/>
+      </Position18>
+      <Position19>
+        <Filename Value="unit1.pas"/>
+        <Caret Line="228" Column="1" TopLine="222"/>
+      </Position19>
+      <Position20>
+        <Filename Value="unit1.pas"/>
+        <Caret Line="169" Column="22" TopLine="144"/>
+      </Position20>
+      <Position21>
+        <Filename Value="unit1.pas"/>
+        <Caret Line="173" Column="5" TopLine="144"/>
+      </Position21>
+      <Position22>
+        <Filename Value="unit1.pas"/>
+        <Caret Line="240" Column="57" TopLine="227"/>
+      </Position22>
+      <Position23>
+        <Filename Value="unit1.pas"/>
+        <Caret Line="250" Column="52" TopLine="235"/>
+      </Position23>
+      <Position24>
+        <Filename Value="unit1.pas"/>
+        <Caret Line="292" Column="55" TopLine="273"/>
+      </Position24>
+      <Position25>
+        <Filename Value="unit1.pas"/>
+        <Caret Line="266" Column="19" TopLine="246"/>
+      </Position25>
+      <Position26>
+        <Filename Value="unit1.pas"/>
+        <Caret Line="290" Column="25" TopLine="277"/>
+      </Position26>
+      <Position27>
+        <Filename Value="unit1.pas"/>
+        <Caret Line="223" Column="2" TopLine="217"/>
+      </Position27>
+      <Position28>
+        <Filename Value="unit1.pas"/>
+        <Caret Line="289" Column="25" TopLine="276"/>
+      </Position28>
+      <Position29>
+        <Filename Value="unit1.pas"/>
+        <Caret Line="239" Column="48" TopLine="226"/>
+      </Position29>
+      <Position30>
+        <Filename Value="unit1.pas"/>
+        <Caret Line="289" Column="19" TopLine="276"/>
+      </Position30>
     </JumpHistory>
   </ProjectOptions>
   <CompilerOptions>
@@ -215,6 +305,16 @@
     </Other>
   </CompilerOptions>
   <Debugging>
+    <BreakPoints Count="2">
+      <Item1>
+        <Source Value="unit1.pas"/>
+        <Line Value="221"/>
+      </Item1>
+      <Item2>
+        <Source Value="unit1.pas"/>
+        <Line Value="52"/>
+      </Item2>
+    </BreakPoints>
     <Exceptions Count="2">
       <Item1>
         <Name Value="ECodetoolError"/>
